--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,97 +4,59 @@
   box-sizing: border-box;
 }
 :root{
-  --font-general: 'Josefin Sans', sans-serif;
+  --font-general: 'Manrope', sans-serif;
 }
-
-img {
-  max-width: 100%;
-  display: block;
-}
-
-ul {
-  list-style: none;
-  padding-left: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-h3{
-  padding: 0px 5px;
-  margin: 2px 0px;
-}
-
-body {
+body{
   margin: 0;
-  background-color: lightgray;
+  background-color: #202733;
+  min-height: 100vh;
+  user-select: none;
 }
 
-.main{
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.game-container{
-  background-color: #393939;
-  max-width: 750px;
-  width: 100%;
-  padding: 20px;
-  border-radius: 20px;
-  color: white;
-  font-family: var(--font-general);
+.card{
+  width: 540px;
+  height: 332px;
+  padding: 30px;
+  background-color: #313A48;
+  position: relative;
+  top: 200px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 15px;
+  box-shadow: 30px 50px 80px 0px rgba(0, 0, 0, 0.10);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-#question-options{
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-
-.option{
-  background-color: #ffffff;
-  border-radius: 10px;
-  color: #393939;
-  cursor: pointer;
-  font-size: 1.5rem;
-  font-weight: 700;
-  padding: 20px;
   text-align: center;
-  width: 49%;
-  border: 3px solid #c6c6c6;
+  color: white;
+  font-family: var(--font-general);
 }
-
-.center{
-  text-align: center;
-}
-
-.flex{
-  display: flex;
-}
-
-.hide{
-  display: none;
-}
-#results{
+.card__title{
   font-size: 0.8rem;
-  font-weight: 100;
+  color: #53FFAA;
+  letter-spacing: 4px;
+  margin-bottom: 0px;
 }
-.result-box{
+.card__text{
+  font-size: 2rem;
+  color: #CEE3E9;
+  width: 85%;
+}
+.card__button{
+  width: 64px;
+  height: 64px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  background-color: #53FFAA;
+  border-radius: 50%;
+  position: absolute;
+  bottom: -50px;
+  transition: all 0.2s;
+}
+.card__button:hover{
+  box-shadow: 0px 0px 40px 0px #53FFAA;
+  cursor: pointer;
+  transform: scale(0.95);
 }
