--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,9 @@
   --font-general: 'Manrope', sans-serif;
 }
 body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
   background-color: #202733;
   min-height: 100vh;
@@ -18,10 +21,6 @@ body{
   height: 332px;
   padding: 30px;
   background-color: #313A48;
-  position: relative;
-  top: 200px;
-  left: 50%;
-  transform: translateX(-50%);
   border-radius: 15px;
   box-shadow: 30px 50px 80px 0px rgba(0, 0, 0, 0.10);
   display: flex;
@@ -52,11 +51,24 @@ body{
   background-color: #53FFAA;
   border-radius: 50%;
   position: absolute;
-  bottom: -50px;
+  bottom: 205px;
   transition: all 0.2s;
 }
 .card__button:hover{
   box-shadow: 0px 0px 40px 0px #53FFAA;
   cursor: pointer;
   transform: scale(0.95);
+}
+
+@media screen and (max-width: 768px) {
+  .card{
+    width: 330px;
+    height: 500px;
+  }
+  .card__button{
+    bottom: 120px;
+  }
+  #line{
+    width: 100%;
+  }
 }
